Migrate AG Grid to v34 JavaScript Theming API and add autoSizeStrategy